--- a/main.css
+++ b/main.css
@@ -3,12 +3,12 @@ html, body {
 }
 
 body {
-    background-color: #3d3d3d;
+    background-color: #000000;
     color: whitesmoke;
     width: 100%;
     height: 100vh;
     font-family: monospace;
-    font-size: large;
+    font-size: 18px;
     line-height: 1.5em;
     display: flex;
     justify-content: center;
@@ -83,8 +83,8 @@ ul {
     padding: 1.5em;
     height: auto;
     background-color: #6D8665;
-    max-width: 1200px;
-    border: 5px solid #0b2007;
+    max-width: 960px;
+    border: 5px solid #bdbdbd;
     border-radius: 2rem;
 }
 
