--- a/main.css
+++ b/main.css
@@ -3,11 +3,11 @@ html, body {
 }
 
 body {
-    background-color: #000000;
+    background-color: #1a271e;
     color: whitesmoke;
     width: 100%;
     height: 100vh;
-    font-family: monospace;
+    font-family: Retro;
     font-size: 18px;
     line-height: 1.5em;
     display: flex;
@@ -111,7 +111,7 @@ a:visited {
 }
 
 a:hover, active {
-    color: #eee;
+    color: #65ee87;
 }
 
 a.link {
@@ -121,3 +121,5 @@ a.link {
 .page {
     width: 100%;
 }
+
+@font-face { font-family: Retro; font-weight: normal; src: url('Retro-Gaming.ttf');}
